k8s/labs/networking/custom-dns-working.yaml
# Lab 45 Exercise 5: Working custom DNS config with real nameservers
apiVersion: v1
kind: Pod
metadata:
  name: custom-dns-working
spec:
  containers:
  - name: test
    image: busybox:1.36
    command: ["sleep", "3600"]
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 8.8.8.8
      - 1.1.1.1
    searches:
      - default.svc.cluster.local
    options:
      - name: ndots
        value: "2"
