k8s/labs/networking/dns-debug.yaml
# Lab 45 Exercise 7: DNS debug Pod with dnsutils tools (dig, host, nslookup)
apiVersion: v1
kind: Pod
metadata:
  name: dns-debug
spec:
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    command:
      - sleep
      - "3600"
