k8s/labs/networking/dnsconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnscustomconfig
  namespace: default
spec:
  containers:
    - name: test
      image: busybox:1.36
      command:
       - sleep
       - "3600"
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 1.2.3.4
    searches:
      - ns1.svc.cluster-domain.example
      - my.dns.search.suffix
    options:
      - name: ndots
        value: "2"
      - name: edns0
