k8s/labs/networking/dnsdefault.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsdefault
  namespace: default
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
  restartPolicy: Always
  dnsPolicy: Default
