k8s/labs/networking/dnspolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnspolicy
  namespace: default
spec:
  containers:
  - image: busybox:1.36
    command:
      - sleep
      - "3600"
    name: busybox
  restartPolicy: Always
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
