k8s/labs/networking/multi-port-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-port-pod
  labels:
    app: multi-port-app
spec:
  containers:
  - name: multi-port-container
    image: hashicorp/http-echo
    args:
    - "-text=Hello, Multi-Port Service!"
    ports:
    - containerPort: 8080
      name: http
    - containerPort: 9090
      name: custom
