k8s/labs/networking/multi-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-port-service
spec:
  selector:
    app: multi-port-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30080
    name: http
  - protocol: TCP
    port: 9090
    targetPort: 9090
    nodePort: 30090
    name: custom
